tests/positive/Test25.sp
(***** Testing functions ******* )
main:Int() {
	(**** its pretty much a definition *****)
	
}