tests/negative/Test5.sp
(* Testing return invalid type *)

abs:Int where abs > 0 (val:Int) {
	return ;
}